--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>This is Vishal Arora or is it </h1>
-    <h2>This is version 6.0 of our application.</h2>
+    <h1>This is Vishal Arora from Github </h1>
+    <h2>This is version 7.0 of our application.</h2>
   </div>
 </body>
 </html>
